# Aicode-termux

./: .gitignore  CONTRIBUTING.md  build-all.sh  build-package.sh  build.gradle  clean.sh  gradle.properties  repo.json  settings.gradle
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-package-request.yml  config.yml
.github/workflows/: bootstrap_archives.yml  build-all-android.yml  build-bootstrap.yml  build-vulkan-android.yml  check_repository_health.yml  command_not_found.yml  docker_image.yml  package_updates.yml  packages.yml
app/: .gitignore  build.gradle
app/src/main/cpp/: CMakeLists.txt  llama_direct_jni.cpp  native_config.c  termux.c  termux_exec.c
disabled-packages/apk-tools/: src-termux_prefix.h.patch
disabled-packages/qt5-qmake/: termux-build-qmake.sh
disabled-packages/termux-x11/: termux-x11.c
root-packages/containerd/: build.sh  bundle.go.patch
root-packages/wireless-tools/: Makefile.patch
scripts/: build-bootstraps.sh  generate-bootstraps.sh  properties.sh  test-runner.sh
scripts/bootstrap/: termux-bootstrap-second-stage.sh
x11-packages/cinnamon/: 0012-disable-locale-layouts.patch
x11-packages/kitty/: glfw-glfw.py.patch
x11-packages/libncnn/: use-cross-protoc.patch
x11-packages/libxfce4ui/: 0002-use-wrapped-vapigen.patch
x11-packages/luanti/: 0003-replace-xdg-open.patch
x11-packages/mixxx/: disable-libusb.patch
x11-packages/qscintilla-qt6/: build.sh
x11-packages/qt6-qttools/: cmake-find-zstd-before-clang.patch.beforehostbuild
x11-packages/xfce4-panel/: 0002-use-wrapped-vapigen.patch
(+198 files in other folders)
